fix and improved

--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -1,5 +1,5 @@
 script_template: inno_setup.iss
-app_id: 728B3532-C74B-4870-9068-BE70FE12A3E6
+app_id: 728B3532-C74B-4870-9068-BE70FE1LITES
 app_name: LiClash
 publisher: appshub.cc
 publisher_url: https://github.com/appshubcc/LiClash
