update doze and suspend

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,7 @@ jobs:
         include:
           - platform: android
             os: ubuntu-latest
+            arch: arm64
           - platform: windows
             os: windows-2022
             arch: amd64
