--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,8 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin_version=1.9.24
