--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -11,4 +11,4 @@ PRODUCT_NAME = LiClash
 PRODUCT_BUNDLE_IDENTIFIER = com.appshub.liclash
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.follow. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2026 Appshub All rights reserved.
