--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,8 @@ jobs:
           - platform: android
             os: ubuntu-latest
             arch: arm64
+          - platform: windows
+            os: Windows-2022
 
     steps:
       - name: Setup rust
