--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,9 @@ jobs:
           - platform: android
             os: ubuntu-latest
             arch: arm64
+          - platform: windows
+            os: windows-latest
+            arch: amd64
 
     steps:
       - name: Setup rust
@@ -50,7 +53,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25.5'
+          go-version: '1.25.6'
           cache-dependency-path: |
             core/go.sum
 
