--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   crypto: ^3.0.3
   flutter_acrylic: ^1.1.4
+  sentry_flutter: ^8.15.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
