--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: li_clash
 description: A multi-platform proxy client based on ClashMeta, simple and easy to use, open-source and ad-free.
 publish_to: 'none'
-version: 1.11.18+2026011805
+version: 1.11.21+2026011901
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
@@ -19,7 +19,7 @@ dependencies:
   proxy:
     path: plugins/proxy
   window_ext:
-    path: plugins/window_ext
+    path: plugins/windo_ext
   launch_at_startup: ^0.5.1
   json_annotation: ^4.9.0
   file_picker: ^8.0.3
@@ -64,7 +64,6 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   crypto: ^3.0.3
   flutter_acrylic: ^1.1.4
-  sentry_flutter: ^9.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
