--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   proxy:
     path: plugins/proxy
   window_ext:
-    path: plugins/window_ext
+    path: plugins/windo_ext
   launch_at_startup: ^0.5.1
   json_annotation: ^4.9.0
   file_picker: ^8.0.3
