--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -91,7 +91,7 @@
         <service
             android:name=".services.LiClashTileService"
             android:exported="true"
-            android:icon="@drawable/ic"
+            android:icon="@drawable/ic_tile"
             android:label="LiClash"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
             tools:targetApi="n">
