--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -1,7 +1,7 @@
 display_name: LiClash
 
-packager: chen08209
-packagerEmail: chen08209@gmail.com
+packager: appshub
+packagerEmail: appshubcc@gmail.com
 license: Other
 
 priority: optional
