--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: li_clash
 description: A multi-platform proxy client based on ClashMeta, simple and easy to use, open-source and ad-free.
 publish_to: 'none'
-version: 1.11.27+2026011905
+version: 1.11.28+2026011906
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
@@ -63,6 +63,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   crypto: ^3.0.3
   flutter_acrylic: ^1.1.4
+  sentry_flutter: ^9.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
