--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   crypto: ^3.0.3
   flutter_acrylic: ^1.1.4
   sentry_flutter: ^9.10.0
+  google_nav_bar: ^5.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
